# knighttime

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KNightTimeConfig.cmake.in  README.md
autotests/: CMakeLists.txt  cycle_test.cpp  schedule_test.cpp  transition_test.cpp
examples/: CMakeLists.txt
examples/monitor/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Messages.sh  kdarklightdbustypes_p.h  kdarklightschedule.cpp  kdarklightschedule.h  kdarklightscheduleprovider.cpp  kdarklightscheduleprovider.h  kdarklightscheduleprovider_p.h  kdarklightschedulesubscription.cpp  kdarklightschedulesubscription_p.h  knighttime-index.qdoc  knighttime.qdoc  knighttime.qdocconf  knighttimedbustypes_p.h  knighttimeschedule.cpp  knighttimeschedule.h  knighttimescheduleprovider.cpp  knighttimescheduleprovider.h  knighttimescheduleprovider_p.h  knighttimeschedulesubscription.cpp  knighttimeschedulesubscription_p.h
src/daemon/: CMakeLists.txt  Messages.sh  kdarklightmanager.cpp  kdarklightmanager.h  kdarklightmanagerinterface.cpp  kdarklightmanagerinterface.h  kdarklightscheduler.cpp  kdarklightscheduler.h  kdarklightsettings.kcfg  kdarklightstate.kcfg  knighttimemanager.cpp  knighttimemanager.h  knighttimemanagerinterface.cpp  knighttimemanagerinterface.h  knighttimescheduler.cpp  knighttimescheduler.h  knighttimesettings.kcfg  knighttimestate.kcfg  ksolardarklightscheduler.cpp  ksolardarklightscheduler.h  ksolarnighttimescheduler.cpp  ksolarnighttimescheduler.h  ktimeddarklightscheduler.cpp  ktimeddarklightscheduler.h  ktimednighttimescheduler.cpp  ktimednighttimescheduler.h  main.cpp  org.kde.NightTime.xml  org.kde.knighttimed.desktop.in  plasma-knighttimed.service.in
